--- a/hw/hw2.qmd
+++ b/hw/hw2.qmd
@@ -11,8 +11,6 @@ execute:
   cache: true
 ---
 
-## A Closed Universe
-
 
 ## Friedmann Equation II
 
@@ -20,12 +18,106 @@ I mentioned in class that the second Friedmann equation
 can be derived from the first Friedmann equation and the continuity equation.
 Work out the details of this derivation.
 
-
 ## Cosmological Dimming
+
+Show that the observed (bolometric, see below) surface brightness $I_o$ of a source at redshift $z$ is related to its intrinsic surface brightness $I_e$ by
+$$
+I_\text{o} = I_\text{e} (1+z)^{-4}
+$$
 
 
 ## Magnitudes and K-corrections
 
+This problem builds on our discussion of luminosity distances, highlighting some standard observational terminology as well as a few subtleties.
+
+Define the apparent magnitude of an object with observed flux $f$ as
+$$
+m = -2.5 \log_{10} \left[ \frac{f}{f_{0}} \right] 
+$$
+where $f_{0}$ is the flux of a standard (traditionally Vega, but more modern systems use "AB-magnitudes"). The absolute magnitude $M$ is defined as the apparent magnitude a source would have if it were at a distance of 10 pc. 
+
+- Using these definitions, show that
+$$
+m = M + DM(z)
+$$
+where $DM(z)$ is the "distance modulus" defined by
+$$
+DM(z) = 5 \log_{10} \left[ \frac{D_{L}(z)}{\text{10\, pc}} \right] 
+$$
+
+So far, so good. However, these expressions are true for bolometric quantities (i.e. total fluxes integrated over all wavelengths). Astronomical observations are often done in wavelength bandpasses, and this gives rise to the K-correction term. Let us see how this comes about.
+
+Consider the differential flux $f_{\nu}$ and the corresponding differential luminosity $L_{\nu}$, defined as the flux/luminosity per unit frequency such that
+$$
+f = \int f_{\nu} \, d\nu 
+$$
+and similarly for the luminosity. 
+
+- Explain why
+$$
+S_{\nu} = (1+z) \frac{L_{\nu (1+z)}}{L_{\nu}} \frac{L_{\nu}}{4\pi D_{L}^{2}}
+$$
+
+The apparent magnitude formula then gets modified to 
+$$
+m = M + DM + K
+$$
+where the K-correction is
+$$
+K = -2.5 \log_{10} \left[ (1+z) \frac{L_{\nu (1+z)}}{L_{\nu}} \right] 
+$$
+
+The paper by Hogg 1999 in the bibliography is very useful here, as is the follow up paper on K-corrections.
 
 
 ## A Static Universe
+
+This is a modified version of Huterer, 3.10.
+
+Consider the Friedmann equation where we explicitly write out the contributions from matter $\rho_{m}$, the cosmological constant $\Lambda$, and curvature $k = \kappa/R_{0}^{2}$.
+
+$$
+\left( \frac{\dot{a}}{a} \right)^{2} = \frac{8 \pi G}{3} \rho_{m} + \frac{\Lambda}{3} - \frac{k}{a^{2}}
+$$
+Now (and we will discuss this in class further), matter has no pressure, and $P_{\Lambda} = -\rho_{\Lambda}$. 
+
+-  Write out the second Friedmann equation for this model. You will need to recast the cosmological constant term as a density. Do so by making it look like the matter density in the first Friedmann equation. Finally, the density and pressure can be written as a sum of the individual components.
+- Find a value of $\Lambda$ and $k$ such that $\dot{a} = 0$ and $\ddot{a}=0$. Is this Universe open, closed or flat?
+
+This is, by construction, a static Universe, and was one constructed by Einstein. However, it is also unstable to perturbations. To see this, imagine perturbing the scale factor by
+$$
+a(t) = 1 + \delta a(t)
+$$
+To lowest order, this perturbs the matter density by 
+$$
+\rho_{m}(t) = \rho_{m}[1 - 3 \delta a(t)]
+$$
+The cosmological constant is unaffected (it is a constant after all). 
+
+- Substitute this into the second Friedmann equation and derive a differential equation for $\delta a(t)$. Your answer should only depend on $\Lambda$. 
+- Solve for $\delta a(t)$. You may assume initial conditions $\delta a(t) = \delta a_{0}$ and $d(\delta a)/dt = 0$. Explain why this is an unstable solution.
+
+
+## Redshift Drift
+
+This is a modified version of Problem 2.6 in Huterer, A Course in Cosmology. 
+
+Can one directly observe the expansion of the Universe through a changing redshift? To explore 
+this, start from the definition of redshift 
+$$
+1+z = \frac{a(t_{0})}{a(t_{1})}
+$$
+and show that 
+$$
+\frac{dz}{dt_{0}} = (1+z) H_{0} - H(t_{1})
+$$
+To derive this, you may need to derive an expression for $dt_{1}/dt_{0}$ which you can do by eg. relating the frequency of light emitted at $t_1$ to that observed at $t_{0}$. (A similar factor comes into the definition of the luminosity distance).
+
+Now, let's do some simple estimates. For a matter dominated flat Universe, we will show that 
+$$
+H(z) = H_{0}(1+z)^{3/2}
+$$
+Using this, estimate the change in redshift for an object at $z=1$. Assume $H_{0}=100h\,\text{km/s/Mpc}$
+
+You may find arXiv:0310808 an interesting read on redshifts, and you will find a discussion of this effect towards the end of this article.
+
